test/fixtures/map/source_map_throw_icu.snapshot
*icu.jsx:*
    ("*******", throw Error("an error"));
     ^


Error: an error
    at *
    at *

Node.js *
